@startuml Kanban App Project Entity Relationship Diagram

entity User {
    * id : string
    * name : string
    * first_name : string
    last_name : string
    email : string
    email_verified_at: timestamp
    * password : string
    * created_at : timestamp
    * updated_at : timestamp
}

entity Board {
    * id : string
    * alias_id: string
    * name : string
    thumbnail_url : string
    * created_at : timestamp
    * updated_at : timestamp
    ---
    * user_id : string
}

entity UserBoardActivity {
    * opened_at : timestamp
    ---
    * user_id : string
    * board_id : string
}

entity Column {
    * id : string
    * name : string
    * color: Color
    * created_at : timestamp
    * updated_at : timestamp
    * order : unsigned tinyint
    ---
    * board_id : string
}

entity Card {
    * id : string
    body: string
    * color: Color
    * created_at : timestamp
    * updated_at : timestamp
    ---
    * column_id : string
}

enum Color {
    STONE
    RED
    AMBER
    LIME
    EMERALD
    CYAN
    BLUE
    VIOLET
    FUCHSIA
    ROSE
}

User ||--o{ Board
User ||--o{ UserBoardActivity
Board ||--o{ UserBoardActivity
Board ||--o{ Column
Column ||--o| Column
Column ||--o{ Card

@enduml
